--- a/Python_code/templates/register.html
+++ b/Python_code/templates/register.html
@@ -11,7 +11,7 @@
 <body>
     <div class="container">
         <div class="rowmt-5">
-            <h1>로그인</h1>
+            <h1>회원가입</h1>
         </div>
         <div class="rowmt-5">
             <div class="col-12">
@@ -21,14 +21,19 @@
                         {{ form.userid.label("아이디")}}
                         {{ form.userid(class="form-control", placeholder="아이디")}}
                     </div>
+                        <div class="form-group">
+                        {{ form.username.label("사용자 이름")}}
+                        {{ form.username(class="form-control", placeholder="사용자 이름")}}
+                    </div>
                     <div class="form-group">
                         {{ form.password.label("비밀번호")}}
-                        {% if form.password.errors %}
-                        {{ form.password.errors.0 }}
-                        {% endif %}
                         {{ form.password(class="form-control", placeholder="비밀번호")}}
                     </div>
-                    <button type="submit" class="btn btn-primary">로그인</button>
+                    <div class="form-group">
+                        {{ form.repassword.label("비밀번호 확인")}}
+                        {{ form.repassword(class="form-control", placeholder="비밀번호 확인")}}
+                    </div>
+                    <button type="submit" class="btn btn-primary">등록</button>
                 </form>
             </div>
         </div>
